# TEst

./: .gitignore  AGENTS.md  guess_the_number.py  index.html  pyproject.toml
.github/workflows/: ci.yml
tests/: test_guess_the_number.py
